new feature added mini

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <button class="decre">decrement</button>
       <button class="incre">increment</button>
       <h1></h1>
-      <img src="" alt="" />
+      <img id="nav1" src="images/back.png" alt="">
+      <img id="nav2" src="images/right-arrows.png" alt="">
+      <img id="image" src="" alt="" />
       <p></p>
     </div>
     <script type="module" src="script.js"></script>
